Changes file for Date-Holidays

0.16 2014.08.18 maintenance release, update not required

- Added t/changes.t Test::CPAN::Changes test


0.15 2007.03.13 maintenance release, update not required

- Added t/perlcriticrc

- Updated t/critic.t to more contemporary version


0.14 2007.03.12 maintenance release, update not required

  Added the following (again) to MANIFEST as a result of the Kwalitee test:
    t/pod.t
    t/pod-coverage.t

  These had been removed from the distribution, but the kwalitee
  metrics likes them so, they are however not run as part of the
  normal test suite unless $TEST_POD is set in your environment.


0.13 2007.03.07 maintenance release, update not required

- Fixed b0rken tests
    t/new.t did not have a SKIP section
    t/datetime.t did not have a SKIP section


0.12 2007.03.05 maintenance release, update not required

- Fixed a problem with pod.t

- Increased the Perl::Critic severity to 5

- Exchanged Readonly for good old constants, one less dependency,
  should make the failing tests go away


0.11 2007.02.25 maintenance release, update not required

- Added missing requirement to Build.PL Readonly
  Based on tests reports from CPAN testers

  Thanks david at cantrell.org.uk

  I thought Readonly was core, but according to Module::CoreList this
  is not the case, so this has been corrected now

- Updated to more contemporary versions of:
    t/pod-coverage.t
    t/pod.t

  These should be there for the quality, but will not be run as a part
  of the normal test run, unless the TEST_POD environment variable is
  set.

  This seem to be the defacto way of doing things. So they have been
  removed from MANIFEST.SKIP so they are now a part of the distribution.


0.10 2007.02.22 feature release, update not required

- Updated and corrected POD in Date::Holidays

- Updated and corrected POD in Date::Holidays::Adapter

- Added $VERSION to all exception classes
  (Date::Holidays::Exception::*), I and who just file an RT ticket on