@@ -10,7 +10,7 @@ use Error qw(:try);
 use base 'Date::Holidays::Adapter';
 use Date::Holidays::Exception::UnsupportedMethod;
 
-$VERSION = '0.01';
+$VERSION = '0.16';
 
 sub holidays {
     throw Date::Holidays::Exception::UnsupportedMethod('is_holiday');
