@@ -13,7 +13,7 @@ use Date::Holidays::Exception::UnsupportedMethod;
 use Date::Holidays::Exception::InvalidCountryCode;
 use Date::Holidays::Exception::NoCountrySpecified;
 
-$VERSION = '0.01';
+$VERSION = '0.16';
 
 sub holidays {
     throw Date::Holidays::Exception::UnsupportedMethod('is_holiday');
